some Lint improvs